# Australia_law

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
docs/: architecture.md
scripts/: 01_download_embeddings.py  02_prepare_documents.py  03_build_turso_schema.py  03_download_corpus_snippets.py  04_build_local_db.py  04_build_turso_schema.py  04_bulk_load.py  05_verify.py  vic_00_build_seed.py  vic_01_crawl.py  vic_02_load.py  vic_02_load_http.py
scripts_old/: 02_aggregate_doc_vectors.py  03_download_corpus_snippets.py  05_bulk_load.py  06_verify_counts.py
scripts_old/scripts/: 01_download_corpus.py  02_prepare_documents.py  03_build_turso_schema.py  04_bulk_load.py  05_verify.py
src/au_law_mcp/: __init__.py  config.py  server.py
src/au_law_mcp/db/: __init__.py  client.py  schema.sql
tests/: test_config.py  test_db_client.py
